kubernetes/radarr/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.nas.dogeek.me
    external-dns.alpha.kubernetes.io/target: nas.dogeek.me
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
  - hosts:
    - radarr.nas.dogeek.me
    secretName: radarr-cert-prod
  rules:
  - host: radarr.nas.dogeek.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              name: http
